[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "purchase-agent"
version = "0.1.0"
description = "A safe multi-agent purchasing assistant starter kit."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "purchase-agent contributors" }]
dependencies = []

[project.scripts]
purchase-agent = "purchase_agent.cli:main"

[tool.setuptools.packages.find]
include = ["purchase_agent*"]
